--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.mongoose_java/com.example.mongoose_java.HelloApplication</mainClass>
+                            <mainClass>com.example.mongoose_java/com.example.mongoose_java.App</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
